{
  "sourceLanguage" : "en",
  "strings" : {
    "%lld" : {
      "comment" : "A label displaying the user's score in the game",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "%lld"
          }
        },
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "%lld"
          }
        }
      }
    },
    "Amarelo" : {
      "comment" : "Yellow color name.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Yellow"
          }
        },
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Amarelo"
          }
        }
      }
    },
    "Azul" : {
      "comment" : "Name of a color.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Blue"
          }
        },
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Azul"
          }
        }
      }
    },
    "BRAIN" : {
      "comment" : "A title of the game.",
      "isCommentAutoGenerated" : true
    },
    "Ciano" : {
      "comment" : "Name of a color.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cyan"
          }
        },
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ciano"
          }
        }
      }
    },
    "Cinza" : {
      "comment" : "Name of a color.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Gray"
          }
        },
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cinza"
          }
        }
      }
    },
    "GAME OVER" : {
      "comment" : "The title of the game over screen.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "GAME OVER"
          }
        },
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "GAME OVER"
          }
        }
      }
    },
    "Índigo" : {
      "comment" : "Name of a color.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Indigo"
          }
        },
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Índigo"
          }
        }
      }
    },
    "JOGAR" : {
      "comment" : "A button to start a game.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "PLAY"
          }
        },
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "JOGAR"
          }
        }
      }
    },
    "Laranja" : {
      "comment" : "Name of a color.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Orange"
          }
        },
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Laranja"
          }
        }
      }
    },
    "Marrom" : {
      "comment" : "Name of a color.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Brown"
          }
        },
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Marrom"
          }
        }
      }
    },
    "Menta" : {
      "comment" : "Name of a color that is a light blue.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Mint"
          }
        },
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Menta"
          }
        }
      }
    },
    "Pontos: %lld" : {
      "comment" : "A label that displays the user's score.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Score: %lld"
          }
        },
        "pt-BR" : {
          "stringUnit" : {
            "state" : "needs_review",
            "value" : "Pontos: %lld"
          }
        }
      }
    },
    "PREPARAR..." : {
      "comment" : "A placeholder text displayed when the game is not in progress.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Get Ready…"
          }
        },
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "PREPARAR…"
          }
        }
      }
    },
    "pts" : {
      "comment" : "A label displayed underneath the user's score.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "pts"
          }
        },
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "pts"
          }
        }
      }
    },
    "Recorde: %lld" : {
      "comment" : "A label displaying the best score. The argument is the best score.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "High Score: %lld"
          }
        },
        "pt-BR" : {
          "stringUnit" : {
            "state" : "needs_review",
            "value" : "Recorde: %lld"
          }
        }
      }
    },
    "REPETIR" : {
      "comment" : "A button to restart the game.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Retry"
          }
        },
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "REPETIR"
          }
        }
      }
    },
    "Rosa" : {
      "comment" : "Name of a color.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pink"
          }
        },
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Rosa"
          }
        }
      }
    },
    "Roxo" : {
      "comment" : "Name of a color.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Purple"
          }
        },
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Roxo"
          }
        }
      }
    },
    "TEST" : {
      "comment" : "A label displayed in the middle of the screen.",
      "extractionState" : "stale",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "TEST"
          }
        },
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "TEST"
          }
        }
      }
    },
    "Treine seu cérebro" : {
      "comment" : "A description of the game.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Train your brain"
          }
        },
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Treine seu cérebro"
          }
        }
      }
    },
    "Verde" : {
      "comment" : "Name of a color.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Green"
          }
        },
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Verde"
          }
        }
      }
    },
    "Vermelho" : {
      "comment" : "Name of the red color.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Red"
          }
        },
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Vermelho"
          }
        }
      }
    }
  },
  "version" : "1.2"
}